# ai-invention-ce2af9-arrhenius-kinetics-of-llm-inference-acti

./: README.md
paper_latex/: paper.tex  references.bib
paper_latex/workspace/: .terminal_claude_agent_struct_out.json  paper.aux  paper.bbl  paper.blg  paper.out  render_pages.py
round-1/dataset-1/: README.md
round-1/dataset-1/demo/: data_code_demo.ipynb  mini_demo_data.json
round-1/dataset-1/src/: .terminal_claude_agent_struct_out.json  build_dataset.py  data.py  data_out.json  data_out_mini.json  data_out_preview.json  filter_log.txt  full_data_out.json  mini_data_out.json  preview_data_out.json  pyproject.toml  schema.json
round-1/proof-1/: README.md
round-1/proof-1/demo/: art_4twtOOE7KarP.md
round-1/proof-1/src/: .terminal_claude_agent_struct_out.json  arrhenius_softmax.lean  proof_out.json
round-1/research-1/: README.md
round-2/experiment-1/: README.md
round-2/experiment-1/src/: .terminal_claude_agent_struct_out.json  full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
round-2/experiment-1/src/logs/: checkpoint.json
round-2/proof-1/: README.md
round-2/research-1/: README.md
round-3/evaluation-1/: README.md
round-3/experiment-1/: README.md
round-4/evaluation-1/: README.md
round-4/experiment-1/: README.md
round-4/experiment-1/src/: .terminal_claude_agent_struct_out.json  full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
round-4/experiment-1/src/logs/: checkpoint.json  model_selection.json
round-5/evaluation-1/: README.md
round-5/experiment-1/: README.md
(+60 files in other folders)
