[project]
name = "arrhenius-iter4-exp1"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.4.6",
    "pandas==3.0.3",
    "scipy==1.17.1",
    "scikit-learn==1.9.0",
    "aiohttp==3.14.1",
    "loguru==0.7.3",
    "statsmodels==0.14.6",
    "datasets==5.0.0",
    "aiosignal==1.4.0",
    "frozenlist==1.8.0",
    "multidict==6.7.1",
    "yarl==1.24.2",
    "fsspec==2026.4.0",
    "huggingface-hub==1.19.0",
    "pyarrow==24.0.0",
    "requests==2.34.2",
    "tqdm==4.68.2",
    "joblib==1.5.3",
    "threadpoolctl==3.6.0",
    "python-dateutil==2.9.0.post0",
    "packaging==26.2",
    "certifi==2026.5.20",
    "charset-normalizer==3.4.7",
    "idna==3.18",
    "urllib3==2.7.0",
    "filelock==3.29.4",
    "xxhash==3.7.0",
    "dill==0.4.1",
    "multiprocess==0.70.19",
]
